syntax = "proto3";

option java_package = "bruhcollectie.itaysonlab.jetispot.proto";
option java_multiple_files = true;

message AppConfig {
  PlayerConfig playerConfig = 1;
}

message PlayerConfig {
  bool autoplay = 1;
  bool normalization = 2;
  AudioQuality preferredQuality = 3;
  AudioNormalization normalizationLevel = 4;
  int32 crossfade = 5; // 12s - max
  bool preload = 6;
}

enum AudioQuality {
  NORMAL = 0;
  HIGH = 1;
  VERY_HIGH = 2;
}

// (loud at +6, normal at +3, quiet at -5)
enum AudioNormalization {
  QUIET = 0;
  BALANCED = 1;
  LOUD = 2;
}